crates/picus/tests/ui/no_run_app_runner.rs
//! Old runners are not part of the public facade.
use picus::run_app;

fn main() {
    let _ = run_app;
}
